[gd_scene load_steps=4 format=3 uid="uid://bkhbo717kfeyr"]

[ext_resource type="Script" path="res://Scenes/NPCS/ServerArenaDigimonPlayer.gd" id="1_s64eg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_058e8"]
radius = 8.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_afglp"]
radius = 8.0
height = 24.0

[node name="ServerArenaDigimonPlayer" type="CharacterBody2D"]
z_as_relative = false
collision_layer = 128
collision_mask = 0
motion_mode = 1
platform_on_leave = 2
safe_margin = 0.001
script = ExtResource("1_s64eg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_058e8")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_afglp")

[node name="TurnAxis" type="Marker2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="TurnAxis"]
position = Vector2(32, 0)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 200.0
path_postprocessing = 1
avoidance_mask = 0
debug_enabled = true
debug_path_custom_color = Color(0.647245, 0, 0.216602, 1)

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
